tests/baselines/reference/mergedInterfacesWithInheritedPrivates2(strict=true).errors.txt
mergedInterfacesWithInheritedPrivates2.ts(2,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates2.ts(6,13): error TS2564: Property 'w' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates2.ts(17,7): error TS2420: Class 'D' incorrectly implements interface 'A'.
  Types have separate declarations of a private property 'w'.
mergedInterfacesWithInheritedPrivates2.ts(18,13): error TS2564: Property 'w' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates2.ts(19,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates2.ts(20,5): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates2.ts(23,7): error TS2415: Class 'E' incorrectly extends base class 'C2'.
  Property 'w' is private in type 'C2' but not in type 'E'.
mergedInterfacesWithInheritedPrivates2.ts(23,7): error TS2420: Class 'E' incorrectly implements interface 'A'.
  Property 'x' is missing in type 'E' but required in type 'A'.
mergedInterfacesWithInheritedPrivates2.ts(24,5): error TS2564: Property 'w' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates2.ts(25,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates2.ts(26,5): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates2.ts(30,9): error TS2454: Variable 'a' is used before being assigned.
mergedInterfacesWithInheritedPrivates2.ts(30,11): error TS2341: Property 'x' is private and only accessible within class 'C'.
mergedInterfacesWithInheritedPrivates2.ts(31,10): error TS2454: Variable 'a' is used before being assigned.
mergedInterfacesWithInheritedPrivates2.ts(31,12): error TS2341: Property 'w' is private and only accessible within class 'C2'.


==== mergedInterfacesWithInheritedPrivates2.ts (15 errors) ====
    class C {
        private x: number;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C2 {
        private w: number;
                ~
!!! error TS2564: Property 'w' has no initializer and is not definitely assigned in the constructor.
    }
    
    interface A extends C {
        y: string;
    }
    
    interface A extends C2 {
        z: string;
    }
    
    class D extends C implements A { // error
          ~
!!! error TS2420: Class 'D' incorrectly implements interface 'A'.
!!! error TS2420:   Types have separate declarations of a private property 'w'.
        private w: number;
                ~
!!! error TS2564: Property 'w' has no initializer and is not definitely assigned in the constructor.
        y: string;
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
        z: string;
        ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
    }
    
    class E extends C2 implements A { // error
          ~
!!! error TS2415: Class 'E' incorrectly extends base class 'C2'.
!!! error TS2415:   Property 'w' is private in type 'C2' but not in type 'E'.
          ~
!!! error TS2420: Class 'E' incorrectly implements interface 'A'.
!!! error TS2420:   Property 'x' is missing in type 'E' but required in type 'A'.
!!! related TS2728 mergedInterfacesWithInheritedPrivates2.ts:2:13: 'x' is declared here.
        w: number;
        ~
!!! error TS2564: Property 'w' has no initializer and is not definitely assigned in the constructor.
        y: string;
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
        z: string;
        ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
    }
    
    var a: A;
    var r = a.x; // error
            ~
!!! error TS2454: Variable 'a' is used before being assigned.
              ~
!!! error TS2341: Property 'x' is private and only accessible within class 'C'.
    var r2 = a.w; // error
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
               ~
!!! error TS2341: Property 'w' is private and only accessible within class 'C2'.